# aero

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  seed_strava_token.sh
backend/migrations/: 20260331180516_create_users.sql  20260331180529_create_strava_tokens.sql  20260331180543_create_oauth_states.sql  20260331180558_create_activities.sql  20260408002558_create_activity_streams.sql
backend/src/: app.rs  app_state.rs  main.rs
backend/src/db/: activities.rs  mod.rs  pool.rs  strava.rs
backend/src/models/: activity.rs  mod.rs
backend/src/models/db/: activity.rs  mod.rs  strava.rs
backend/src/models/domain/: activity.rs  strava.rs
backend/src/routes/: activities.rs  mod.rs  strava.rs
backend/src/services/: activities.rs  mod.rs  strava_client.rs  strava_service.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: MiniMap.tsx  Navbar.tsx  StreamChart.tsx  WeeklyMileageChart.tsx
frontend/src/components/activities/: ActivityBadge.tsx  ActivityCard.tsx  ActivityDetailHero.tsx  ActivityDetailMap.tsx  ActivityFilters.tsx  ActivityLapsTable.tsx  ActivityStat.tsx  ActivityStatsPanel.tsx  ActivityStreamsChart.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  chip.tsx  nav-link.tsx
frontend/src/lib/: api.ts  formatters.ts  units.ts
frontend/src/pages/: Activities.tsx  ActivityDetail.tsx  Dashboard.tsx
frontend/src/types/: activity.ts
